<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_card_car"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:elevation="24dp"
        app:cardBackgroundColor="@color/gray"
        app:cardCornerRadius="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <ImageView
                android:id="@+id/iv_delete"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="8dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_close"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/text_delete"/>

            <ImageView
                android:id="@+id/iv_car"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/cd_name"
                android:src="@drawable/car"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_price"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_price"
                app:layout_constraintStart_toStartOf="@+id/iv_car"
                app:layout_constraintTop_toBottomOf="@+id/iv_car" />

            <TextView
                android:id="@+id/tv_price_value"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:text="@string/text_price_value"
                app:layout_constraintStart_toEndOf="@+id/tv_price"
                app:layout_constraintTop_toBottomOf="@+id/iv_car" />

            <TextView
                android:id="@+id/tv_battery"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_battery"
                app:layout_constraintStart_toStartOf="@+id/tv_price"
                app:layout_constraintTop_toBottomOf="@+id/tv_price" />

            <TextView
                android:id="@+id/tv_battery_value"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_battery_value"
                app:layout_constraintStart_toStartOf="@+id/tv_price_value"
                app:layout_constraintTop_toBottomOf="@+id/tv_price_value" />

            <TextView
                android:id="@+id/tv_potency"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_potency"
                app:layout_constraintStart_toStartOf="@+id/tv_battery"
                app:layout_constraintTop_toBottomOf="@+id/tv_battery" />

            <TextView
                android:id="@+id/tv_potency_value"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_potency_value"
                app:layout_constraintStart_toStartOf="@+id/tv_battery_value"
                app:layout_constraintTop_toBottomOf="@+id/tv_battery_value" />

            <TextView
                android:id="@+id/tv_recharge"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/text_recharge"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_potency"
                app:layout_constraintTop_toBottomOf="@+id/tv_potency" />

            <TextView
                android:id="@+id/tv_recharge_value"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_recharge_value"
                app:layout_constraintStart_toStartOf="@+id/tv_potency_value"
                app:layout_constraintTop_toBottomOf="@+id/tv_potency_value" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>